<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SizeMatters</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="textView1">New Text</string>
    <string name="textView2">New Text</string>
    <string name="textView3">New Text</string>
    <string name="textView4">New Text</string>
    <string name="textView5">New Text</string>
    <string name="textView6">New Text</string>
    <string name="textView7">New Text</string>
    <string name="textView8">New Text</string>
    <string name="textView9">New Text</string>
    <string name="show_detailsView">Show measurements</string>
    <string name="title_activity_pick_meassurement">PickMeassurementActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_object">EditObjectActivity</string>

</resources>
