<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="edu.chl.startup.sizematters.app.MainActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:text="@string/dummy_content" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="361dp"
                android:layout_height="wrap_content"
                android:text="@string/textView6"
                android:id="@+id/speedX"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_weight="0.16" />

            <TextView
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:text="@string/textView8"
                android:id="@+id/distanceX"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="0.12" />

            <TextView
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:text="@string/textView9"
                android:id="@+id/accY"
                android:layout_weight="0.17" />

            <TextView
                android:layout_width="146dp"
                android:layout_height="57dp"
                android:text="@string/textView1"
                android:id="@+id/speedY"
                android:layout_gravity="left|top" />

            <TextView
                android:layout_width="216dp"
                android:layout_height="60dp"
                android:text="@string/textView4"
                android:id="@+id/distanceY" />

            <TextView
                android:layout_width="382dp"
                android:layout_height="wrap_content"
                android:text="@string/textView7"
                android:id="@+id/accZ"
                android:layout_gravity="right|top"
                android:layout_weight="0.19" />

            <TextView
                android:layout_width="109dp"
                android:layout_height="60dp"
                android:text="@string/textView2"
                android:id="@+id/speedZ"
                android:layout_gravity="left|top" />

            <TextView
                android:layout_width="373dp"
                android:layout_height="69dp"
                android:text="@string/textView3"
                android:id="@+id/distanceZ"
                android:layout_gravity="left|center_vertical" />

            <TextView
                android:layout_width="243dp"
                android:layout_height="wrap_content"
                android:text="@string/textView5"
                android:id="@+id/accX"
                android:layout_weight="0.17" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="483dp"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:weightSum="1">

    </LinearLayout>

</FrameLayout>
